--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -39,25 +40,4 @@
 <!--        android:text="NO_INFORMATION"-->
 <!--        android:visibility="gone" />-->
 
-</RelativeLayout>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-<!--    android:orientation="vertical"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent">-->
-<!--    &lt;!&ndash; A CardView that contains a TextView &ndash;&gt;-->
-<!--    <android.support.v7.widget.CardView-->
-<!--        xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
-<!--        android:id="@+id/card_view"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:layout_width="200dp"-->
-<!--        android:layout_height="200dp"-->
-<!--        card_view:cardCornerRadius="4dp">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/text_profile"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent" />-->
-<!--    </android.support.v7.widget.CardView>-->
-<!--</LinearLayout>-->
+</LinearLayout>
